--- a/markup/_dist/faq.html
+++ b/markup/_dist/faq.html
@@ -94,9 +94,9 @@
               <div id="accordion" role="tablist" aria-multiselectable="true">
                 <div class="card">
                   <div role="tab" id="headingOne" class="card-header">
-                    <h5 class="mb-0"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">why nlc2?</a></h5>
+                    <h5 class="mb-0"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="collapsed">why nlc2?</a></h5>
                   </div>
-                  <div id="collapseOne" role="tabpanel" aria-labelledby="headingOne" class="collapse show">
+                  <div id="collapseOne" role="tabpanel" aria-labelledby="headingOne" class="collapse ">
                     <div class="card-block">
                       <p>Using NLC2 instead of fiat currency allows the platform to navigate around restrictive sports betting laws in the United States and other countries around the world. This gives the platform a truly global reach that long-established competitors can only dream of.</p>
                     </div>
