--- a/markup/_dist/contests.html
+++ b/markup/_dist/contests.html
@@ -91,25 +91,28 @@
     </header>
     <main>
       <section class="nl-section nl-players nl-contests">
-        <div class="container container-wider">
+        <div class="container-fluid"> 
           <div class="row align-items-center">
-            <div class="heading-search">
-              <h1 class="heading-search__header">contests</h1>
-              <div class="nl-contests-search heading-search__search">
-                <div class="input-group">
-                  <input type="text" placeholder="Search contests" class="form-control"><span class="input-group-btn">
-                    <button type="button" class="btn btn-secondary"><i class="fa fa-search" aria-hidden="true"></i></button></span>
+            <div class="col-lg-12">
+              <div class="heading-search">
+                <h1 class="heading-search__header">contests</h1>
+                <div class="nl-contests-search heading-search__search">
+                  <div class="input-group">
+                    <input type="text" placeholder="Search contests" class="form-control"><span class="input-group-btn">
+                      <button type="button" class="btn btn-secondary"><i class="fa fa-search" aria-hidden="true"></i></button></span>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
           <div class="row">
-            <div class="col md-12 col-lg-8">
+            <div class="col-md-12 col-lg-8">
               <div class="nl-players-table nl-contests-table">
                 <ul role="tablist" class="nav nav-tabs">
                   <li class="nav-item"><a data-toggle="tab" href="#all" role="tab" class="nav-link active">NLC2</a></li>
                   <li class="nav-item"><a data-toggle="tab" href="#gk" role="tab" class="nav-link">Free</a></li>
-                  <li class="nav-item"><a data-toggle="tab" href="#d" role="tab" class="nav-link">private pool</a></li>
+                  <li class="nav-item"><a data-toggle="tab" href="#d" role="tab" class="nav-link">private</a></li>
+                  <li class="nav-item"><a data-toggle="tab" href="#d" role="tab" class="nav-link">My Contests</a></li>
                 </ul>
                 <div class="tab-content">
                   <div id="all" role="tabpanel" class="tab-pane active">
@@ -287,27 +290,40 @@
                 <h3>Contest info</h3>
               </div>
               <div class="nl-contest-info-table">
-                <table class="table table-info1">
+                <table class="table table-info1 text">
                   <tbody>
                     <tr>
                       <td>
                         <div>
                           <p class="tit">CONTEST:</p>
-                          <p>Goals for Everyone</p>
-                          <p class="tit">buy in:</p>
-                          <p>10nlc2</p>
+                          <p>Goals for Everyone in the house</p>
                         </div>
                       </td>
-                      <td></td>
                       <td>
                         <div>
                           <p class="tit">teams:</p>
                           <p>7/100</p>
+                        </div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <div>       
+                          <p class="tit">buy in:</p>
+                          <p>10nlc2</p>
+                        </div>
+                      </td>
+                      <td>
+                        <div>
                           <p class="tit">allowed teams:</p>
                           <p>2</p>
                         </div>
                       </td>
                     </tr>
+                  </tbody>
+                </table>
+                <table class="table table-info1 buttons">
+                  <tbody>
                     <tr>
                       <td>
                         <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary">Enter</button>
