--- a/markup/_dist/contests.html
+++ b/markup/_dist/contests.html
@@ -505,7 +505,7 @@
                 <div data-position="QB" class="nl-player-block nl-QB-position"><img src="assets/img/football/img-QB.png" alt="QB">
                   <div class="nl-player-block--data">
                     <p>gronkowski</p>
-                    <p class="data"><span>12.67</span> <span>$42000</span></p>
+                    <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                   </div>
                 </div>
               </div>
