--- a/markup/_dist/create_team.html
+++ b/markup/_dist/create_team.html
@@ -1251,77 +1251,77 @@
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                      <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
                   <div data-position="DL" class="nl-player-block nl-DL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                      <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
                   <div data-position="DR" class="nl-player-block nl-DR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                      <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
                   <div data-position="FLEXL" class="nl-player-block nl-FLEXL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                      <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
                   <div data-position="DM" class="nl-player-block nl-DM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                      <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
                   <div data-position="MM" class="nl-player-block nl-MM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                      <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
                   <div data-position="MR" class="nl-player-block nl-MR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                      <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
                   <div data-position="ML" class="nl-player-block nl-ML-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                      <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
                   <div data-position="FLEXR" class="nl-player-block nl-FLEXR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                      <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
                   <div data-position="AL" class="nl-player-block nl-AL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                      <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
                   <div data-position="AR" class="nl-player-block nl-AR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                      <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
                 </div>
