--- a/markup/_dist/homepage_soccer.html
+++ b/markup/_dist/homepage_soccer.html
@@ -731,67 +731,67 @@
                         <div data-position="GK" class="nl-player-block nl-GK-position"><img src="assets/img/img-goalkeeper.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>gronkowski</p>
-                            <p class="data"><span>12.67</span> <span>$42000</span></p>
+                            <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
                         <div data-position="DL" class="nl-player-block nl-DL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>gronkowski</p>
-                            <p class="data"><span>12.67</span> <span>$42000</span></p>
+                            <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
                         <div data-position="DR" class="nl-player-block nl-DR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>gronkowski</p>
-                            <p class="data"><span>12.67</span> <span>$42000</span></p>
+                            <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
                         <div data-position="DL" class="nl-player-block nl-FLEXL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>gronkowski</p>
-                            <p class="data"><span>12.67</span> <span>$42000</span></p>
+                            <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
                         <div data-position="DM" class="nl-player-block nl-DM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>gronkowski</p>
-                            <p class="data"><span>12.67</span> <span>$42000</span></p>
+                            <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
                         <div data-position="MM" class="nl-player-block nl-MM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>gronkowski</p>
-                            <p class="data"><span>12.67</span> <span>$42000</span></p>
+                            <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
                         <div data-position="MR" class="nl-player-block nl-MR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>gronkowski</p>
-                            <p class="data"><span>12.67</span> <span>$42000</span></p>
+                            <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
                         <div data-position="ML" class="nl-player-block nl-ML-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>gronkowski</p>
-                            <p class="data"><span>12.67</span> <span>$42000</span></p>
+                            <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
                         <div data-position="FLEXR" class="nl-player-block nl-FLEXR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>gronkowski</p>
-                            <p class="data"><span>12.67</span> <span>$42000</span></p>
+                            <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
                         <div data-position="AL" class="nl-player-block nl-AL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>gronkowski</p>
-                            <p class="data"><span>12.67</span> <span>$42000</span></p>
+                            <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
                         <div data-position="AR" class="nl-player-block nl-AR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>gronkowski</p>
-                            <p class="data"><span>12.67</span> <span>$42000</span></p>
+                            <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
                       </div>
@@ -927,7 +927,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 col-lg-8 offset-lg-2">
                       <div class="nl-team-info">
                         <div class="nl-team-data">
                           <div class="row"> 
