--- a/markup/_dist/live_score.html
+++ b/markup/_dist/live_score.html
@@ -583,64 +583,64 @@
                   <div data-position="FLEX" class="nl-player-block nl-FLEX-position"><img src="assets/img/football/FLEX.png" alt="FLEX">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
-                      <p class="data">FP <span>12.67</span> </p>
-                      <p class="data">Score <span>15</span></p>
+                      <p class="data">FP <span class="orange">12.67</span> </p>
+                      <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
                   <div data-position="K" class="nl-player-block nl-K-position"><img src="assets/img/football/K.png" alt="K">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
-                      <p class="data">FP <span>12.67</span> </p>
-                      <p class="data">Score <span>15</span></p>
+                      <p class="data">FP <span class="orange">12.67</span> </p>
+                      <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
                   <div data-position="LRB" class="nl-player-block nl-LRB-position"><img src="assets/img/football/LRB.png" alt="LRB">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
-                      <p class="data">FP <span>12.67</span> </p>
-                      <p class="data">Score <span>15</span></p>
+                      <p class="data">FP <span class="orange">12.67</span> </p>
+                      <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
                   <div data-position="RRB" class="nl-player-block nl-RRB-position"><img src="assets/img/football/RRB.png" alt="RRB">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
-                      <p class="data">FP <span>12.67</span> </p>
-                      <p class="data">Score <span>15</span></p>
+                      <p class="data">FP <span class="orange">12.67</span> </p>
+                      <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
                   <div data-position="QB" class="nl-player-block nl-QB-position"><img src="assets/img/football/QB.png" alt="QB">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
-                      <p class="data">FP <span>12.67</span> </p>
-                      <p class="data">Score <span>15</span></p>
+                      <p class="data">FP <span class="orange">12.67</span> </p>
+                      <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
                   <div data-position="LWR" class="nl-player-block nl-LWR-position"><img src="assets/img/football/LWR.png" alt="LWR">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
-                      <p class="data">FP <span>12.67</span> </p>
-                      <p class="data">Score <span>15</span></p>
+                      <p class="data">FP <span class="orange">12.67</span> </p>
+                      <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
                   <div data-position="RWR" class="nl-player-block nl-RWR-position"><img src="assets/img/football/RWR.png" alt="RWR">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
-                      <p class="data">FP <span>12.67</span> </p>
-                      <p class="data">Score <span>15</span></p>
+                      <p class="data">FP <span class="orange">12.67</span> </p>
+                      <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
                   <div data-position="TE" class="nl-player-block nl-TE-position"><img src="assets/img/football/TE.png" alt="TE">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
-                      <p class="data">FP <span>12.67</span> </p>
-                      <p class="data">Score <span>15</span></p>
+                      <p class="data">FP <span class="orange">12.67</span> </p>
+                      <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
                   <div data-position="DEF" class="nl-player-block nl-DEF-position"><img src="assets/img/helmet-3" alt="logo">
                     <div class="nl-player-block--data">
                       <p>PATRIOTS</p>
-                      <p class="data">FP <span>12.67</span> </p>
-                      <p class="data">Score <span>15</span>		</p>
+                      <p class="data">FP <span class="orange">12.67</span> </p>
+                      <p class="data">Score <span class="orange">15</span>		</p>
                     </div>
                   </div>
                 </div>
@@ -2246,7 +2246,7 @@
                 <div data-position="QB" class="nl-player-block nl-QB-position"><img src="assets/img/football/img-QB.png" alt="QB">
                   <div class="nl-player-block--data">
                     <p>gronkowski</p>
-                    <p class="data"><span>12.67</span> <span>$42000</span></p>
+                    <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                   </div>
                 </div>
               </div>
