--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -1220,7 +1220,7 @@
             <div class="col-10 offset-1 col-sm-6 offset-sm-3 col-lg-5 offset-lg-0 col-xl-5 field">
               <div class="nl-section nl-create-team homepage-field">
                 <div class="row">
-                  <div class="col-12 no-padding-mobile">
+                  <div class="col-12 no-padding-mobile text-center">
                     <h5>MY TEAMS</h5>
                   </div>
                   <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-6 offset-xl-3 no-padding-mobile">
